tests/miniJava/neg/003871_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { if while ( 0 ) { } else { } } }
